[#14350] DocDB: Fix false deadlock issue(s) when txn rollsback to savepoint
Summary:
The deadlock detector code currently maintains wait-for dependencies only on a transaction basis and doesn't have subtxn level information. This leads to false deadlock issues. For instance, consider a scenario where txn 1 is blocked by txn 2. Now txn 2 rolls back to a savepoint such that it is no more a blocker for txn 1, and instead waits on txn 1. The new wait-for edge from txn 2 -> txn 1 causes a false deadlock since the wait-for graph still holds the old dependency edge tnx 1 -> txn2.

This diff addresses the issue by storing the subtxns for each blocker txn that the waiter txn is waiting on. For each blocker txn the waiter txn is waiting on, the wait-queue now forwards blocking subtxn set info along with the wait-for edge. This is done by adding a field `SubtxnSet` to the `UpdateTransactionWaitingForStatusRequestPB` proto message. On receiving the wait-for request, the transaction coordinator forwards a probe with probe_id, waiter_txn, blocker_txn_info (p, t1, t2_info) to the blocker txn's (t2) coordinator. t2's coordinator checks whether any of the subtxns reported are active, and if so, forwards the probe by sending new request to all of t2's blockers. This avoids the false deadlock problem described above as transaction coordinators now drop probes waiting on inactive subtxn set before processing/forwarding them.

There is an implicit assumption of causality here. In the above example, consider when txn2 rolls back to a savepoint. When txn coordinator of txn2 receives the probe that txn1 is waiting on txn2, it checks for the subtxn status. If the subtxn is still active, it implies that the coordinator hasn’t yet seen the rollback request from the query layer. Since the query layer synchronously updates the coordinator when the subtxn is rolled back, it couldn’t have issued any subsequent statements (and hence the txn2 -> txn1 wait-for edge wouldn’t have come in too). If the

--- a/src/yb/common/CMakeLists.txt
+++ b/src/yb/common/CMakeLists.txt
@@ -178,3 +178,4 @@ ADD_YB_TEST(placement_info-test)
 ADD_YB_TEST(schema-test)
 ADD_YB_TEST(types-test)
 ADD_YB_TEST(wire_protocol-test)
+ADD_YB_TEST(subtxn_set_and_pb-test)
