[#16331] DocDB: Move CatalogManager and Master from ent to src
Summary:
Moved xrepl_catalog_manager.cc and sys_catalog_xrepl-test.cc. from ent to src folder. Moved and renamed catalog_manager_ent to catalog_manager_ext. The two catalog_manager.h files have been merged into one, and some common functions like RunLoaders have been merged in catalog_manager.cc.
Merged enterprise versions of Master and catalog_entity_info into the src versions.

Removed YB_INCLUDE_EXTENSIONS CMake function and all _ENTENSIONS from CMake files.
Removed ent/src from common-test-env.sh, build_time.py, dependency_graph.py, dep_graph_common.py, fix_include.py, gen_pch.py and source_files.py

Test Plan: All jenkins test

Reviewers: bogdan, slingam, jhe, mbautin

Reviewed By: jhe, mbautin

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D23422

--- a/src/yb/integration-tests/CMakeLists.txt
+++ b/src/yb/integration-tests/CMakeLists.txt
@@ -83,8 +83,7 @@ target_link_libraries(integration-tests
   yb_pgwrapper
   master_proto
   cdc_test_util
-  test_echo_service_proto
-  ${INTEGRATION_TESTS_LIB_EXTENSIONS})
+  test_echo_service_proto)
 
 add_dependencies(integration-tests
   "${YB_MASTER_DYNAMIC_EXE_NAME}"
