[PLAT-4366][PLAT-6784][PLAT-6900][PLAT-7742][PLAT-7605][PLAT-7787][PLAT-7809] Handling BufferUnderflowException issues, Fix backup issues after k8s universe upgrade
Summary:
In yb-client handle the errors when the yb-admin call throws errors during the list snapshot schedule, create snapshot schedule, restore snapshot schedule and delete snapshot schedule.
Create a ybc container during the universe upgrade operation(edit Kubernetes universe).

Test Plan:
Repro'd the PITR issue and handled the exceptions better
Verified that the ybc container is up and running after the edit universe operation.

Reviewers: vkumar, vbansal, sneelakantan

Reviewed By: vbansal, sneelakantan

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23556

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -844,6 +844,9 @@ ybc {
     node_batch_size = 15,
     allow_scheduled_upgrade = true
   }
+  k8s {
+    enabled = true
+  }
 }
 
 runtime_config {
