[BACKPORT 2.18][PLAT-7269] PLATFORM: Added a retry for ModifyMasterClusterConfig on config version mismatch
Summary:
Original commit: ea5bebf / D23560
We found some cases where we would hit a config version mismatch when
attempting to modify the cluster config due to a config version mismatch.
This mismatch will happen if the passed in config "version" doesn't match the
current config version  - for instance, the current config got changed
between the read/write of our new, updated config.

Adding a simple retry should allow us to re-get the update config, with the
correct version value, modify it, and set it to the modified value.

In addition, we now have a runtime config option to set the timeout for
yb-client connections in YBA.

Test Plan:
1. Validated new yb-client compiles and works with yba
2. Checked new runtime config values

Reviewers: sb-yb, nsingh

Reviewed By: nsingh

Subscribers: yugaware, sb-yb, nsingh, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24374

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -876,6 +876,11 @@ ybc {
   k8s {
     enabled = true
   }
+  timeout {
+    admin_operation_timeout_ms = 120000
+    socket_read_timeout_ms = 30000
+    operation_timeout_ms = 60000
+  }
 }
 
 runtime_config {
