[BACKPORT 2.17.2.2180][PLAT-7731] resize node now works with new cgroup changes
Summary:
Setup cgroup requires 'systemd_options' field to be populated, but
the resize node workflow did not provide that information.
Updated ChangeInstanceType to correctly pass in the value of useSystemd
based on the universe details

Test Plan:
tested deploy + resize of a universe and validated --systemd-services is
correctly passed into the setup-cgroup.yml ansible playbook

Reviewers: sanketh, muthu, vmallepalli

Reviewed By: vmallepalli

Subscribers: jenkins-bot, yugaware, sanketh, vmallepalli, muthu

Differential Revision: https://phabricator.dev.yugabyte.com/D23498

--- a/managed/devops/roles/setup-cgroup/tasks/main.yml
+++ b/managed/devops/roles/setup-cgroup/tasks/main.yml
@@ -16,6 +16,14 @@
 # to create and setup the cgroup. If we created the cgroup in ansible, it would be deleted when the
 # vm reboots. This instead ensures that the cgroup always exists before the tserver gets started
 - block:
+  - block:
+    - set_fact:
+        systemd_dir: "/etc/systemd/system"
+    - set_fact:
+        systemd_dir: "{{ yb_home_dir | default('/home/yugabyte') }}/.config/systemd/user"
+      when: systemd_user.stat.exists
+    when: systemd_dir is undefined
+
   - name: check for cgconfig service
     ansible.builtin.shell:
       "if systemctl list-units | grep -q cgconfig; then echo 'true'; else echo 'false'; fi"
