[#15051] DocDB: Enable packed row for YCQL in debug builds
Summary:
This diff enables packed row for YCQL in debug build and adjust tests for this mode.

Also improved restore sys catalog to use specified schema version instead of hardcoded one.

Test Plan: Jenkins

Reviewers: qhu, rthallam

Reviewed By: rthallam

Subscribers: bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D22284

--- a/src/yb/client/CMakeLists.txt
+++ b/src/yb/client/CMakeLists.txt
@@ -122,7 +122,8 @@ ADD_YB_LIBRARY(ql-dml-test-base
 
 # Tests
 
-set(YB_TEST_LINK_LIBS integration-tests rpc_test_util ql-dml-test-base ${YB_MIN_TEST_LIBS})
+set(YB_TEST_LINK_LIBS
+    yb_docdb_test_common integration-tests rpc_test_util ql-dml-test-base ${YB_MIN_TEST_LIBS})
 ADD_YB_TEST(backup-txn-test)
 ADD_YB_TEST(client-test)
 ADD_YB_TEST(client-unittest)
