[#16412] docdb: fixed linker flags to detect undefined symbols during build rather than in runtime
Summary:
Commit ac72f223eaeb3f75759b6b22c0092d1f6583e7dc removed linker flags `-Wl,--no-undefined` and `-Wl,--no-allow-shlib-undefined` because some of the shared libraries we build rely e.g. on tcmalloc hooks, which will be only provided at runtime, but not at linking time of the shared library.
As a side effect that change made it impossible for linker to catch undefined symbols and when some symbol is undefined, we only will get failure in runtime.

This revision adds back these linker flags only for executable files, so liker can still catch undefined symbols during build phase, but allow libraries to be linked without errors.

Other changes:
- Split `common/wire_protocol.*` into `common/wire_protocol.*` (common lib) and `common/ql_wire_protocol.*` (ql_common lib) to clean up dependencies and fix some tests and tools linker errors that haven't been caught due to removed flags.
- Added missing `YbgStatusCreateError` to `src/postgres/src/backend/exports-common.txt`

Test Plan: Jenkins

Reviewers: mihnea, smishra, mbautin

Reviewed By: mbautin

Subscribers: ybase, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D23480

--- a/src/yb/common/CMakeLists.txt
+++ b/src/yb/common/CMakeLists.txt
@@ -93,6 +93,7 @@ set(COMMON_SRCS
   termination_monitor.cc
   transaction.cc
   transaction_error.cc
+  wire_protocol.cc
   ybc_util.cc
   ybc-internal.cc
   llvm_profile_dumper.cc
@@ -129,7 +130,7 @@ set(QL_SRCS
   ql_scanspec.cc
   row.cc
   schema.cc
-  wire_protocol.cc
+  ql_wire_protocol.cc
 )
 
 set(QL_LIBS
