--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -693,12 +693,6 @@ if ("${YB_TCMALLOC_ENABLED}" STREQUAL "1" OR
     "${YB_BUILD_TYPE}" MATCHES "^(asan|tsan)$")
   message("Allowing undefined symbols "
           "(YB_TCMALLOC_ENABLED=${YB_TCMALLOC_ENABLED}, build type is ${YB_BUILD_TYPE})")
-  if(IS_GCC)
-    # Without this, yb_util cannot get linked with GCC 11 because it references some undefined
-    # symbols belonging to tcmalloc, e.g. HeapProfilerStart.
-    # https://gist.githubusercontent.com/mbautin/53e72fbc8c45b4b0d759673fba102ddf/raw
-    ADD_LINKER_FLAGS("-Wl,--unresolved-symbols=ignore-all")
-  endif()
   if(APPLE)
     # See https://bit.ly/3DrOibC on this Apple Clang specific flag.
     ADD_LINKER_FLAGS("-undefined dynamic_lookup")
@@ -708,8 +702,18 @@ if ("${YB_TCMALLOC_ENABLED}" STREQUAL "1" OR
     #
     # See https://github.com/bazelbuild/bazel/issues/16413 for discussion.
     ADD_LINKER_FLAGS("-Wl,-no_fixup_chains")
+  elseif(IS_GCC)
+    # Without this, yb_util cannot get linked with GCC 11 because it references some undefined
+    # symbols belonging to tcmalloc, e.g. HeapProfilerStart.
+    # https://gist.githubusercontent.com/mbautin/53e72fbc8c45b4b0d759673fba102ddf/raw
+    ADD_LINKER_FLAGS("-Wl,--unresolved-symbols=ignore-all")
   else()
-    ADD_LINKER_FLAGS("-Wl,--allow-shlib-undefined")
+    # Allow undefined symbols when linking libs, so not resolved references to tcmalloc symbols
+    # does not break libs linking.
+    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-shlib-undefined")
+    # Don't allow undefined symbols when linking executables, so we can catch undefined symbols
+    # during build phase rather than later in runtime.
+    ADD_EXE_LINKER_FLAGS("-Wl,--no-undefined -Wl,--no-allow-shlib-undefined")
   endif()
 
   if(APPLE)
