[#16400, #5042] DocDB:Remove ent folder
Summary:
Goodbye and thanks for all the fish.

Fixes #16400, #5042

Test Plan:
All tests

python python/yb/gen_pch.py

export YB_RUN_AFFECTED_TESTS_ONLY=1
build-support/jenkins/test.sh

Reviewers: slingam, bogdan

Reviewed By: slingam, bogdan

Subscribers: ybase, slingam

Differential Revision: https://phabricator.dev.yugabyte.com/D23489

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -584,7 +584,7 @@ file(MAKE_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 set(EXECUTABLE_OUTPUT_PATH "${YB_BUILD_ROOT}/bin")
 file(MAKE_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")
 
-# Generated sources always have higher priority than even the "ent" directory include files.
+# Generated sources always have higher priority.
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/src)
 include_directories(src)
 
@@ -814,8 +814,6 @@ add_subdirectory(src/yb/rocksutil)
 add_subdirectory(src/yb/docdb)
 add_subdirectory(src/yb/yql)
 add_subdirectory(src/yb/cdc)
-
-include("${YB_SRC_ROOT}/ent/CMakeLists.txt")
 
 # Note "yb-server", without the "t" -- this is not a typo. "yb-server" is the unified LTO executable
 # that contains the functionality of both yb-master and yb-tserver, and yb-master/yb-tserver are
