[PLAT-5126][PLAT-5125][PLAT-7264]: Integrate Perf Advisor API and handle error scenarios
Summary:
1. Integrate the new Perf recommendation API
2. Implement the resolved recommendation which should disable pointer events except for the checkbox
3. Filter by DB name and by Recommendation types
4. Handle API error scenarios
5. Handle empty recommendation scenario
6. Handle scenarios for custom recommendations
7. Hidden behind a runtime config

Test Plan:
Please refer to the video
{F35094}

Reviewers: lsangappa, asathyan, kkannan, jmak

Reviewed By: jmak

Subscribers: yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23326

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -82,6 +82,7 @@ yb {
     show_cost=true
 
     feature_flags {
+      perf_advisor=false
       k8s_custom_resources=false
       provider_redesign=false
     }
