[BACKPORT 2.17.2.2180][PLAT-7675] Use enable_nestloop off to improve slow queries performance
Summary:
This diff makes changes to use `enable_nestloop off` pg hint to run the
join sql statement for slow queries to improve its performance.

At 27e1bcb8c82274ef1358300e7c5f57408924dbd5 / D21480, we used
`yb_bnl_batch_size 1024`, but as the doc in the test plan shows, using
`enable_nestloop off` is preferred because with small performance
improvements, it does support a broader versions of YBDB.

Original commit: 75a863d5a718641bdefef5ba1dc93a1b8ce20ae5 / D23532

Test Plan:
  - Created a universe with ysql and ycql table and made sure slow queries show up.
  - Previously performance improvements measured at
https://docs.google.com/document/d/1GHe1okXEclFwOCUouGoB7qWTaLHJ2zfiRppcatBPdXU/edit.

Reviewers: sanketh, jtellez, cwang

Reviewed By: cwang

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D23663

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -633,7 +633,7 @@ yb {
        # columns of pg_stat_statements view
        # See https://www.postgresql.org/docs/current/pgstatstatements.html#id-1.11.7.39.6
        order_by = "total_time"
-       set_batch_nested_loop = true
+       set_enable_nestloop_off = true
     }
 
     # Different wait times for live queries
@@ -813,7 +813,7 @@ runtime_config {
     "yb.security.ssh2_enabled"
     "yb.security.custom_hooks.enable_custom_hooks",
     "yb.security.custom_hooks.enable_sudo",
-    "yb.query_stats.slow_queries.set_batch_nested_loop",
+    "yb.query_stats.slow_queries.set_enable_nestloop_off",
     "yb.backup.pg_based",
     "yb.backup.disable_xxhash_checksum",
     "yb.logs.",
