[PLAT-7759] Update westus3 base image to almalinux
Summary: This diff updates the westus3 base image from centos7 to almalinux8

Test Plan: Validated by creating an Azure universe in westus3 region.

Reviewers: rtsisyk, cdavid, amalyshev

Reviewed By: amalyshev

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23548

--- a/managed/devops/opscli/ybops/data/azu-metadata.yml
+++ b/managed/devops/opscli/ybops/data/azu-metadata.yml
@@ -146,7 +146,7 @@ regions:
     zones: []
   westus3:
     cidr_prefix: "10.46"
-    image: "OpenLogic:CentOS:7_9:7.9.2022020700"
+    image: "almalinux:almalinux:8_5:8.5.20220311"
     zones: ['1','2','3']
 
 
