[PLAT-7757] Fix default of http_enabled
Summary:
Newly added option http_enabled should default to !https_enabled since https_enabled
was an existing option.

- Also fix the order of checkbox and dependent fields so that dependent fields follow the checkbox

Test Plan:
Tested by creating release in replicated test app.
First installed release without http_enabled option.
Then installed release with http_enabled option and proposed fix.
See that the http_enabled checkbox is checked:
{F35384}

Reviewers: sneelakantan

Reviewed By: sneelakantan

Subscribers: yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23585

--- a/managed/devops/replicated.yml
+++ b/managed/devops/replicated.yml
@@ -669,28 +669,28 @@ config:
             - '^http[s]?:\/\/\w+([\.\-\_]\w+)*(:[0-9]+)?(\/.*)?$'
             - "Enter a valid URL of the form http://localhost:3000"
         help_text: Specify protocol-host to be whitelisted in the CORS filter.
-      - name: ui_https_port
-        title: Yugaware UI HTTPS Port
-        help_text: Yugaware UI HTTPS Port
-        type: text
-        default: "443"
-        when: '{{repl ConfigOptionEquals "https_enabled" "1"}}'
-      - name: https_enabled
-        title: Enable HTTPS
-        help_text: When enabled we will listen to https (At least one of https or http should be enabled)
+      - name: http_enabled
+        title: Enable HTTP
+        help_text: When enabled we will listen to http (At least one of http or https should be enabled)
         type: bool
-        default: "1"
+        default: '{{repl if ConfigOptionEquals "https_enabled" "1"}}0{{repl else}}1{{repl end}}'
       - name: ui_http_port
         title: Yugaware UI HTTP Port
         help_text: Yugaware UI HTTP Port
         type: text
         default: "80"
         when: '{{repl ConfigOptionEquals "http_enabled" "1"}}'
-      - name: http_enabled
-        title: Enable HTTP
-        help_text: When enabled we will listen to http (At least one of http or https should be enabled)
+      - name: https_enabled
+        title: Enable HTTPS
+        help_text: When enabled we will listen to https (At least one of https or http should be enabled)
         type: bool
-        default: "0"
+        default: "1"
+      - name: ui_https_port
+        title: Yugaware UI HTTPS Port
+        help_text: Yugaware UI HTTPS Port
+        type: text
+        default: "443"
+        when: '{{repl ConfigOptionEquals "https_enabled" "1"}}'
       - name: hsts_enabled
         title: Enable HSTS
         help_text: Enable HTTP Strict Transport Security. (Requires setup of DNS and SSL certificate issued by a trusted Certificate Authority)
