[PLAT-7824] Turn on new provider UI feature flag by default
Summary: Turn on new provider UI feature flag by default.

Test Plan:
Verify that the runtime config at global level and customer level contains a default value of
true for `yb.ui.feature_flags.provider_redesign`

Reviewers: rmadhavan, asathyan, lsangappa, kkannan

Reviewed By: kkannan

Subscribers: jenkins-bot, anabaria, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23659

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -132,7 +132,7 @@ yb {
     feature_flags {
       perf_advisor=false
       k8s_custom_resources=false
-      provider_redesign=false
+      provider_redesign=true
     }
   }
 
