--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -125,7 +125,7 @@ yb {
     feature_flags {
       perf_advisor=true
       k8s_custom_resources=false
-      provider_redesign=false
+      provider_redesign=true
     }
   }
 
