[BACKPORT 2.16] [PLAT-7265]Added us-gov-east-1 region in aws metadata
Summary:
Added us-gov-east-1 region in aws metadata
Depends on D22973

Test Plan:
iTest
Couldn't check the end to end flow as we don't have us-gov-east-1 region configured.
This change will be given for PoC as part of custom build.

Reviewers: sanketh, nbhatia, vmallepalli, sb-yb, jmak, muthu

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23100

--- a/managed/devops/opscli/ybops/data/aws-metadata.yml
+++ b/managed/devops/opscli/ybops/data/aws-metadata.yml
@@ -89,6 +89,12 @@ regions:
   eu-north-1:
     cidr_prefix: "10.112"
     image: ami-05d343ed0beb6c1eb
+  us-gov-east-1:
+    cidr_prefix: "10.114"
+    image: ami-00c6b007ba906a530 # Centos7 based AMI as we don't alma 8 with x86 in the region.
+  us-gov-west-1:
+    cidr_prefix: "10.115"
+    image: ami-08b470dba6016d395 # Centos7 based AMI as we don't alma 8 with x86 in the region.
 sg_rules:
   - ip_protocol: tcp
     from_port: 22
