--- a/src/yb/integration-tests/CMakeLists.txt
+++ b/src/yb/integration-tests/CMakeLists.txt
@@ -128,6 +128,7 @@ ADD_YB_TEST(tablet-split-itest)
 ADD_YB_TEST(xcluster-tablet-split-itest)
 ADD_YB_TEST(cdcsdk_gflag-test)
 ADD_YB_TEST(stateful_services/stateful_service-itest)
+ADD_YB_TEST(master_heartbeat-itest)
 
 # Tests which fail on purpose for checking Jenkins test failures reporting, disabled
 # (commented out) by default:
