[PLAT-7674] Make sure all properties from different application.conf files are present in reference.conf
Summary:
As part of https://phabricator.dev.yugabyte.com/D23301 we migrated to Play 2.7.
One difference between 2.6 and 2.7 is that Play.Configuration class is not available anymore.
So, all it's usages were replaced with typesafe Config class.
But, it turns out - there is a difference between the 2.
Play.Configuration would return null in case property is missing.
While typesafe Config will throw an Exception.
Went through all application.conf files (REplicated, Yugabundle, K8S, YBA installer) and made sure all YB specific properties, defined there, have default value in reference.conf.
This is going to fix an issue.

Test Plan: dev-itest run

Reviewers: svarshney, skurapati

Reviewed By: svarshney, skurapati

Subscribers: jenkins-bot, svarshney, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23681

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -70,6 +70,7 @@ ebean {
 # =============  END DATABASE RELATED CONFIGURATION ==================================
 
 yb {
+  url = ""
   mode="PLATFORM"
   seedData=false
   multiTenant=false
@@ -83,7 +84,18 @@ yb {
   edit_provider.new.enabled=false
   use_spot_instances = false
   log.logEnvVars=false
+  devops.home = ""
+  thirdparty.packagePath = /opt/third-party
+  grafana.accessKey="changeme"
 
+  docker {
+    network = "bridge"
+    release = ""
+  }
+  swamper {
+    targetPath = ""
+    rulesPath = ""
+  }
   ui {
     enable_dedicated_nodes=false
     show_cost=true
@@ -349,6 +361,8 @@ yb {
   }
 
   kubernetes {
+    storageClass = ""
+    pullSecretName = ""
     # default volume count for kubernetes
     default_volume_count = 1
 
@@ -571,6 +585,7 @@ yb {
       enable_ssh_key_expiration = true
       ssh_key_expiration_threshold_days = 365
     }
+    default.access.key = "yugabyte-default"
   }
 
   ansible {
@@ -796,6 +811,7 @@ yb {
 
   helm {
     timeout_secs = 900
+    packagePath = ""
   }
 
   features {
