[PLAT-7329] Add react-dropzone 3.13.4 to maintain support for our old cypress tests
Summary:
**Context**
The specific combination of redux form + react-dropzone v14 + cypress automation test run on jenkins results in a
failed automation test where we observe that the file seems to fail validation.
This issue is not seen when manually testing and also runs fine when we perform the cypress test locally.

As a straightforward workaround, we'll add back react-dropzone v3.13.4 as a
dependency under the alias react-dropzone3.
This will make the old AWS and GCP provider forms work as they did in the past
and resolve the cypress test issues.

We will leave this dependency in the project until we either remove the old
provider forms or find and fix the root cause of the issue with running
cypress tests on Jenkins.

**Change**
- Add react-dropzone v3.13.4 under the package alias raect-dropzone3
- Revert the support for old AWS, GCP provider form file upload components to
use react-dropzone v3.13.4

Test Plan:
Verfiy that the diff passes cypress GCP smoke tests & regression tests.
Verify that we are able to create a GCP provider using the old provider UI.
{F35546}{F35547}
Verify that we are able to create an AWS provider using the old provider UI.
{F35548}
{F35552}

Reviewers: agarg, rmadhavan, asathyan, lsangappa, kkannan

Reviewed By: kkannan

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23710

--- a/managed/ui/package.json
+++ b/managed/ui/package.json
@@ -109,6 +109,7 @@
     "react-day-picker": "7.4.8",
     "react-dom": "16.13.1",
     "react-dropzone": "14.2.3",
+    "react-dropzone3": "npm:react-dropzone@3.13.4",
     "react-fa": "5.0.0",
     "react-hook-form": "7.40.0",
     "react-i18next": "11.8.15",
