--- a/managed/ui/package.json
+++ b/managed/ui/package.json
@@ -134,6 +134,9 @@
     "redux": "4.0.5",
     "redux-form": "8.3.6",
     "redux-promise": "0.5.3",
+    "slate": "0.91.4",
+    "slate-history": "0.86.0",
+    "slate-react": "0.91.10",
     "typescript": "4.9.3",
     "typy": "3.3.0",
     "yup": "0.30.0"
