--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -82,7 +82,7 @@ yb {
   is_platform_downgrade_allowed=false
   is_platform_downgrade_allowed=${?YB_IS_PLATFORM_DOWNGRADE_ALLOWED}
   start_master_on_stop_node=true
-  edit_provider.new.enabled=false
+  edit_provider.new.enabled=true
   use_spot_instances = false
   log.logEnvVars=false
   devops.home = ""
