[PLAT-7476][xCluster] Implement the backend to support transactional replication
Summary:
This diff adds backend support to create transactional xCluster config.
It relies on the gflag `enable_replicate_transaction_status_table` to know the type of the xCluster config. But we plan to move this to the API body request once YBDB supports it.

It also adds support to set the universe's role through API:
Eg:

```
curl --location --request PUT 'http://192.168.56.102:9000/api/v1/customers/f33e3c9b-75ab-4c30-80ad-cba85646ea39/xcluster_configs/56035e0c-e40a-4f3a-a2a0-787e35fa909b' \
--header 'Content-Type: application/json' \
--header 'X-AUTH-YW-API-TOKEN: 2894987a-4fdf-47cf-95a2-be3f2039cf79' \
--data '{
   "sourceRole":"STANDBY"
}'
```
To set the target universe role use `targetRole`. Please note that you cannot pass both `targetRole` and `sourceRole` in one request.

Test Plan:
 - Create regular xCluster configs and tested add table/remove table/restart/delete
 - Created txn xCluster and tested add table/remove table/restart/pause/resume/delete
 - Ran https://jenkins.dev.yugabyte.com/job/dev-itest-job/8432/ with all the current xCluster itests and all passed except two xClusterUpgrade itests. Those two failings are because of the limitation of the pipeline and are not related to this diff.

Reviewers: jmak, sanketh, cwang

Reviewed By: sanketh, cwang

Subscribers: jenkins-bot, sanketh, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23576

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -117,6 +117,9 @@ yb {
 
   xcluster {
     k8s_tls_support = true
+    transactional {
+      enabled = true
+    }
   }
 
   # Enable/Disable Runtime Config UI under Admin section
