[Backport 2.17.3][PLAT-7863][PLAT-7959] Add validations in the code for YBC packages, WaitForYbcServer task should complete ping status faster
Summary:
Increase the wait time incrementally before every ybc ping
Validations to check that ybc is present before universe creation
Original diff: `https://phabricator.dev.yugabyte.com/D23882`
Original commit: `https://github.com/yugabyte/yugabyte-db/commit/0ea3a0f6bdc39e01bcc9a617e8177fde9b31f599`

Test Plan:
UTs
Manually test that universe creation proceeds only if ybc is present in the release metadata.

Reviewers: vbansal, sneelakantan, vkumar

Reviewed By: vkumar

Subscribers: yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24060

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -913,6 +913,7 @@ runtime_config {
     "yb.ybc_flags.",
     "ybc.upgrade.",
     "ybc.releases.stable_version",
+    "ybc.k8s."
     "yb.node_agent.preflight_checks.",
     "yb.gflags.",
     "yb.start_master_on_stop_node",
