[PLAT-5368][UI] Implement Custom Notification Email Template
Summary:
this diff implements slatejs editor with plugins.
The following plugins are implemented

  # Basic Plugin - supports bold,italics,underline etc
  # SingleLine Plugin - restricts the editor to single line
  # Alert variable plugin - allows to add alert variable to the editor, the user can type '{{' to launch the popover, which has the variable list.

This diff also implements a support for serializing and de-serializing slate js contents to html and vice versa

Note: The design is not implemented as per figma, only the functionalities are implemented. The design will be pushed in the following diff.

Created the separate ticket to track this issue. [[ https://yugabyte.atlassian.net/browse/PLAT-7958 | PLAT-7958 ]]

Test Plan:
Tested manually by creating and editing template using the editor.

{F36041}
{F36042}
{F36043}

Reviewers: lsangappa, jmak, rmadhavan, asathyan

Reviewed By: asathyan

Subscribers: ui, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23723

--- a/managed/ui/package.json
+++ b/managed/ui/package.json
@@ -136,6 +136,7 @@
     "redux-promise": "0.5.3",
     "slate": "0.91.4",
     "slate-history": "0.86.0",
+    "slate-hyperscript": "0.77.0",
     "slate-react": "0.91.10",
     "typescript": "4.9.3",
     "typy": "3.3.0",
