--- a/docs/netlify.toml
+++ b/docs/netlify.toml
@@ -599,7 +599,7 @@
 
 [[redirects]]
   from = "/:version/reference/connectors/*"
-  to = "/preview/integrations/"
+  to = "/preview/integrations/apache-kafka/"
 
 # A few redirects to head off issues with version_menu_pagelinks
 
