--- a/managed/src/main/resources/application.conf
+++ b/managed/src/main/resources/application.conf
@@ -52,6 +52,14 @@ yb {
   # Use mitogen for dev runs because it is noticeably faster,
   # keep disabled in prod because it sometimes has odd failures.
   ansible.strategy = "mitogen_linear"
+
+  # AWS instance type for local dev purpose
+  aws.default_instance_type = "c5.large"
+
+  # Default volume size for all cloud providers
+  aws.default_volume_size_gb = 100
+  gcp.default_volume_size_gb = 100
+  azure.default_volume_size_gb = 100
 }
 
 ybc {
