[BACKPORT 2.16][#15794] docdb: Refactor AreLeadersOnPreferredOnly to Account for Geo Partitioned Table
Summary: Refactor AreLeadersOnPreferredOnly to check for illegally placed leaders amongst tablespaces. Remove the transaction status tablet peer distribution checking.

Test Plan:
AreLeadersOnPreferredOnlyTest
TestAreLeadersOnPreferredOnly, TestAreLeadersOnPreferredOnly_TxnInPreferred, TestLeadersAreOnPreferredOnlyViolation, TestTxnLeadersAreOnPreferredOnlyViolation

Reviewers: jhe, asrivastava

Reviewed By: asrivastava

Subscribers: bogdan, ybase, esheng, dsrinivasan

Differential Revision: https://phabricator.dev.yugabyte.com/D23956

--- a/src/yb/integration-tests/CMakeLists.txt
+++ b/src/yb/integration-tests/CMakeLists.txt
@@ -126,6 +126,7 @@ ADD_YB_TEST(cdcsdk_gflag-test)
 # ADD_YB_TEST(non_gtest_failures-test.sh)
 
 # Not sure if we really need RUN_SERIAL here as this might not be a resource-intensive test.
+ADD_YB_TEST(are_leaders_on_preferred_only-itest)
 ADD_YB_TEST(compaction-test)
 ADD_YB_TEST(compressed_stream-test)
 ADD_YB_TEST(logging-test)
