[BACKPORT 2.14][#16444] docdb: Ignore heartbeats from peers not in reported config
Summary:
Original commit: 664c772d46678d34ad2207c5070b59f290317d00 / D23671
This diff causes us to ignore heartbeats from peers that are not present in the config they are reporting for. This can happen if, for example, a node is removed while it is remote bootstrapping and heartbeating the leader's consensus config (since we copy the consensus state from the superblock of the leader we are remote bootstrapping from). Processing this heartbeat caused the master to erroneously add the peer that is not a member of the config to the tablet's replica map. See JIRA issue for more details.

Test Plan: ybd --cxx_test master_heartbeat-itest

Reviewers: bogdan, skedia

Reviewed By: skedia

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D23961

--- a/src/yb/integration-tests/CMakeLists.txt
+++ b/src/yb/integration-tests/CMakeLists.txt
@@ -115,6 +115,7 @@ ADD_YB_TEST(tablet_server-itest)
 ADD_YB_TEST(tablet-split-itest)
 ADD_YB_TEST(xcluster-tablet-split-itest)
 ADD_YB_TEST(cdcsdk_gflag-test)
+ADD_YB_TEST(master_heartbeat-itest)
 
 # Tests which fail on purpose for checking Jenkins test failures reporting, disabled
 # (commented out) by default:
