[PLAT-7462] Block Universe upgrade/creation if the DB version selected is higher than the current platform version
Summary:
Added a new util function to check DB version against yba version and return BAD_REQUEST in
case DB version is higher

Test Plan: Added unit tests and tested manually by putting higher DB versions in the call

Reviewers: sneelakantan

Reviewed By: sneelakantan

Subscribers: asharma, jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24010

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -104,6 +104,7 @@ yb {
   devops.home = ""
   thirdparty.packagePath = /opt/third-party
   grafana.accessKey="changeme"
+  allow_db_version_more_than_yba_version=false
 
   docker {
     network = "bridge"
