[PLAT-6894] Remove dependency to convert PEM to JKS in YBA installer
Summary:
We've stopped bundling nginx in YBA installer for quite sometime now.
With this removal we needed to terminate HTTPs at PLAY framework in
place of the reverse-proxy nginx. This was initially done by converting
PEM format certificates to JavaKeyStore(JKS) using the external library
pemtokeystore. Back then, this was needed as Play did not understand how
to use PEM files.

However, with commit
https://github.com/yugabyte/yugabyte-db/commit/adedbd4f2d2403cd09e5b32b9a6a7235a4758c0f
we do not need this conversion anymore as our Java layer understands PEM
certificates now. Removing the conversion of PEM format certificates to
JavaKeyStore and creating a single server.pem for TLS. Made PLAY read this PEM file for TLS.

Test Plan:
1. Using PEM format certificates works for TLS in k8s and replicated install.
   Ensure PLAY framework in YBA-I can read this file for HTTPs runs.
2. Test YBA installer with HTTP and HTTPs
3. Tested root and non-root user scenario

Reviewers: muthu, nbhatia, sb-yb, dshubin, sanketh

Reviewed By: dshubin

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24001

--- a/managed/yba-installer/config/templates/yba-installer-platform.yml
+++ b/managed/yba-installer/config/templates/yba-installer-platform.yml
@@ -8,9 +8,11 @@ services:
 
       play.crypto.secret="${PLATFORM_APP_SECRET}"
       play.http.errorHandler = "com.yugabyte.yw.common.YWErrorHandler"
-      play.server.https.keyStore.path = "{{ baseInstall }}/data/yba-installer/certs/server.ks"
-      play.server.https.keyStore.type = "JKS"
-      play.server.https.keyStore.password = "{{ yamlPath "platform.keyStorePassword" }}"
+      play.server.https.keyStore{
+          path = "{{ baseInstall }}/data/yba-installer/certs/server.pem"
+          type = "PEM"
+          password = "{{ yamlPath "platform.keyStorePassword" }}"
+      }
 
       play.i18n.langs = [ "en" ]
       pidfile.path = "/dev/null"
